--- a/index.html
+++ b/index.html
@@ -4,59 +4,42 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Trang tạm của luck08-gif</title>
-  <style>
-    :root{
-      --bg1: #ff9a9e;
-      --bg2: #fad0c4;
-      --accent: #4a90e2;
-      --text: #222;
-      --muted: #444;
-    }
-    html,body{height:100%;margin:0;font-family:Inter, system-ui, Arial, sans-serif;color:var(--text)}
-    body{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      padding:2rem;
-    }
-    .card{
-      background: rgba(255,255,255,0.85);
-      border-radius:12px;
-      padding:2rem;
-      max-width:760px;
-      width:100%;
-      box-shadow:0 10px 30px rgba(0,0,0,0.12);
-      text-align:center;
-    }
-    h1{color:var(--accent); margin:0 0 .5rem; font-size:2.2rem}
-    p.lead{color:var(--muted); margin:0 0 1.25rem}
-    .hero-text { font-weight:600; color:#222; }
-    .btn {
-      display:inline-block;
-      padding:.6rem 1rem;
-      background:var(--accent);
-      color:white;
-      border-radius:8px;
-      text-decoration:none;
-      font-weight:600;
-      box-shadow:0 6px 16px rgba(74,144,226,0.28);
-    }
-    footer{margin-top:1.25rem;color:var(--muted);font-size:0.9rem}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="card">
-    <h1>Xin chào, mình là luck08-gif</h1>
-    <p class="lead">Đây là trang tạm để thử màu và chữ — bạn có thể sửa nội dung này nhanh chóng.</p>
+    <h1 id="title">Xin chào, mình là luck08-gif</h1>
+    <p class="lead" id="subtitle">Đây là trang tạm để thử màu, chữ và tương tác.</p>
 
-    <p class="hero-text">Thêm một vài dòng chữ để hiển thị màu và kiểu chữ. Thay đổi biến CSS ở phần <code>:root</code> nếu muốn đổi theme.</p>
+    <section class="controls">
+      <label>Đổi tiêu đề:
+        <input id="titleInput" type="text" placeholder="Gõ tiêu đề mới..." />
+        <button id="applyTitle">Áp dụng</button>
+      </label>
+
+      <label>Chọn màu chính:
+        <input id="accentColor" type="color" value="#4a90e2" />
+        <button id="applyColor">Áp dụng màu</button>
+      </label>
+
+      <label>Thêm mục:
+        <input id="newItem" type="text" placeholder="Nội dung..." />
+        <button id="addItem">Thêm</button>
+      </label>
+    </section>
+
+    <ul id="items" class="items">
+      <li>Ví dụ mục 1 <button class="remove">X</button></li>
+      <li>Ví dụ mục 2 <button class="remove">X</button></li>
+    </ul>
 
     <p>
-      <a class="btn" href="#">Nút mẫu</a>
+      <a class="btn" href="#" id="sampleBtn">Nút mẫu</a>
     </p>
 
-    <footer>Trang này được phục vụ bởi GitHub Pages — chờ vài phút sau khi push để trang xuất hiện.</footer>
+    <footer>Trang này được phục vụ bởi GitHub Pages — sửa file và đẩy lên để cập nhật.</footer>
   </main>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
