--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Flappy Bird</title>
+<title>Dino Jump Game</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body {
         margin: 0;
-        background: #70c5ce;
+        background: #f7f7f7;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -15,140 +15,143 @@
         font-family: Arial, sans-serif;
     }
     canvas {
-        background: linear-gradient(#70c5ce, #ffffff);
+        background: #fff;
         border: 3px solid #000;
+    }
+    .overlay {
+        position: absolute;
+        text-align: center;
+    }
+    button {
+        padding: 12px 30px;
+        font-size: 18px;
+        cursor: pointer;
     }
 </style>
 </head>
 <body>
 
-<canvas id="game" width="320" height="480"></canvas>
+<div class="overlay" id="menu">
+    <h1>DINO JUMP 🦖</h1>
+    <button onclick="startCountdown()">START</button>
+</div>
+
+<canvas id="game" width="600" height="200"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+const menu = document.getElementById("menu");
 
-let bird = {
-    x: 50,
-    y: 200,
-    r: 12,
-    v: 0
-};
-
-let gravity = 0.5;
-let jump = -8;
-let pipes = [];
-let frame = 0;
+let dino, cactus, gravity = 0.6;
 let score = 0;
-let gameOver = false;
+let playing = false;
+let countdown = 3;
 
 function resetGame() {
-    bird.y = 200;
-    bird.v = 0;
-    pipes = [];
+    dino = { x: 50, y: 150, w: 30, h: 30, v: 0, jump: false };
+    cactus = { x: 600, y: 150, w: 20, h: 40 };
     score = 0;
-    frame = 0;
-    gameOver = false;
 }
 
+resetGame();
+
 document.addEventListener("keydown", e => {
-    if (e.code === "Space") bird.v = jump;
+    if (e.code === "Space" && !dino.jump && playing) {
+        dino.v = -10;
+        dino.jump = true;
+    }
 });
 
 canvas.addEventListener("click", () => {
-    if (gameOver) resetGame();
-    bird.v = jump;
+    if (!dino.jump && playing) {
+        dino.v = -10;
+        dino.jump = true;
+    }
 });
 
-function drawBird() {
-    ctx.beginPath();
-    ctx.arc(bird.x, bird.y, bird.r, 0, Math.PI * 2);
-    ctx.fillStyle = "yellow";
-    ctx.fill();
+function startCountdown() {
+    menu.innerHTML = `<h1>${countdown}</h1>`;
+    const timer = setInterval(() => {
+        countdown--;
+        if (countdown > 0) {
+            menu.innerHTML = `<h1>${countdown}</h1>`;
+        } else {
+            clearInterval(timer);
+            menu.style.display = "none";
+            playing = true;
+            countdown = 3;
+            resetGame();
+            update();
+        }
+    }, 1000);
 }
 
-function drawPipes() {
-    pipes.forEach(p => {
-        ctx.fillStyle = "green";
-        ctx.fillRect(p.x, 0, 40, p.top);
-        ctx.fillRect(p.x, p.bottom, 40, canvas.height - p.bottom);
-    });
+function drawGround() {
+    ctx.fillStyle = "#000";
+    ctx.fillRect(0, 180, canvas.width, 2);
 }
 
-function updatePipes() {
-    if (frame % 90 === 0) {
-        let top = Math.random() * 200 + 50;
-        let gap = 120;
-        pipes.push({
-            x: canvas.width,
-            top: top,
-            bottom: top + gap,
-            passed: false
-        });
-    }
+function drawDino() {
+    ctx.fillStyle = "#000";
+    ctx.fillRect(dino.x, dino.y, dino.w, dino.h);
+}
 
-    pipes.forEach(p => {
-        p.x -= 2;
-
-        // collision
-        if (
-            bird.x + bird.r > p.x &&
-            bird.x - bird.r < p.x + 40 &&
-            (bird.y - bird.r < p.top || bird.y + bird.r > p.bottom)
-        ) {
-            gameOver = true;
-        }
-
-        if (!p.passed && p.x + 40 < bird.x) {
-            score++;
-            p.passed = true;
-        }
-    });
-
-    pipes = pipes.filter(p => p.x + 40 > 0);
+function drawCactus() {
+    ctx.fillStyle = "green";
+    ctx.fillRect(cactus.x, cactus.y, cactus.w, cactus.h);
 }
 
 function drawScore() {
-    ctx.fillStyle = "#000";
-    ctx.font = "20px Arial";
-    ctx.fillText("Score: " + score, 10, 30);
+    ctx.font = "16px Arial";
+    ctx.fillText("Score: " + score, 10, 20);
 }
 
-function drawGameOver() {
-    ctx.fillStyle = "rgba(0,0,0,0.7)";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = "#fff";
-    ctx.font = "28px Arial";
-    ctx.fillText("GAME OVER", 70, 220);
-    ctx.font = "16px Arial";
-    ctx.fillText("Click to restart", 95, 260);
+function gameOver() {
+    playing = false;
+    menu.style.display = "block";
+    menu.innerHTML = `<h1>GAME OVER</h1><p>Score: ${score}</p><button onclick="startCountdown()">RESTART</button>`;
 }
 
 function update() {
-    if (gameOver) {
-        drawGameOver();
-        return;
-    }
+    if (!playing) return;
 
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    bird.v += gravity;
-    bird.y += bird.v;
-
-    if (bird.y + bird.r > canvas.height || bird.y - bird.r < 0) {
-        gameOver = true;
+    // Dino
+    dino.v += gravity;
+    dino.y += dino.v;
+    if (dino.y >= 150) {
+        dino.y = 150;
+        dino.v = 0;
+        dino.jump = false;
     }
 
-    updatePipes();
-    drawPipes();
-    drawBird();
+    // Cactus
+    cactus.x -= 6;
+    if (cactus.x < -cactus.w) {
+        cactus.x = canvas.width;
+        score++;
+    }
+
+    // Collision
+    if (
+        dino.x < cactus.x + cactus.w &&
+        dino.x + dino.w > cactus.x &&
+        dino.y < cactus.y + cactus.h &&
+        dino.y + dino.h > cactus.y
+    ) {
+        gameOver();
+        return;
+    }
+
+    drawGround();
+    drawDino();
+    drawCactus();
     drawScore();
 
-    frame++;
     requestAnimationFrame(update);
 }
-
-update();
 </script>
 
 </body>
